[gd_scene format=3]

[ext_resource path="res://scripts/scenes/desert_dive_bar.gd" type="Script" id=1]

[node name="DesertDiveBar" type="Node2D"]
script = ExtResource( 1 )

[node name="MapTiles" type="Node2D" parent="."]
position = Vector2(0, 0)

[node name="InteractiveStations" type="Node2D" parent="."]
position = Vector2(0, 0)

[node name="PatronSpawns" type="Node2D" parent="."]
position = Vector2(0, 0)

[node name="Lighting" type="Node2D" parent="."]
position = Vector2(0, 0)


